# Server/api/controllers/users.js
@@ -1,17 +1,18 @@
 'use strict';
 var MongoClient = require('mongodb').MongoClient
     , assert = require('assert');
-
+var jwt    = require('jsonwebtoken');
+var config = require('./config');
 // Connection URL
 var url = 'mongodb://127.0.0.1:27017/SeekFriend';
 
 var util = require('util');
 
-var NBR_MAX_POSITION = 10;
+var NBR_MAX_POSITION = 50;
 
 module.exports = {
-  postUsers,
-  postLogin,
+  //postUsers,
+  //postLogin,
   getUsersUsername,
   putUsersUsername,
   deleteUsersUsername,
@@ -29,56 +30,62 @@ module.exports = {
 //utilisé les $set
 
 // POST users
-function postUsers(req, res, next) {
-    MongoClient.connect(url,  function(err, db1) {
-        assert.equal(null, err);
+// function postUsers(req, res, next) {
+//     MongoClient.connect(url,  function(err, db1) {
+//         assert.equal(null, err);
+//
+//         console.log("Connected correctly to server");
+//         db1.collection("users").findOne({$or:[{"username": req.body.username},{"email":req.body.email}]},function(error, exist) {
+//           console.log(exist);
+//             if(exist == null && error == null){
+//                 var data = req.body;
+//                 data.friends = [];
+//                 data.friendsRequest = [];
+//                 data.positions = [];
+//                 db1.collection("users").insert(data,function(err, probe) {
+//                         if (!err){
+// 							                  res.status(201).send();
+//                             // req.session.username = req.body.username;
+//                             // req.session.lastname = req.body.lastname;
+//                             // req.session.firstname = req.body.firstname;
+//                             // res.redirect('/api/users/' + req.body.username);
+//                         }
+//                         else{
+//                             res.status(409).send();
+//                         }
+//                     }
+//                 );
+//             }
+//             else{
+//                 res.status(409).send();
+//             }
+//         });
+//     });
+// }
 
-        console.log("Connected correctly to server");
-        db1.collection("users").findOne({$or:[{"username": req.body.username},{"email":req.body.email}]},function(error, exist) {
-          console.log(exist);
-            if(exist == null && error == null){
-                var data = req.body;
-                data.friends = [];
-                data.friendsRequest = [];
-                data.positions = [];
-                db1.collection("users").insert(data,function(err, probe) {
-                        if (!err){
-							                  res.status(201).send();
-                            // req.session.username = req.body.username;
-                            // req.session.lastname = req.body.lastname;
-                            // req.session.firstname = req.body.firstname;
-                            // res.redirect('/api/users/' + req.body.username);
-                        }
-                        else{
-                            res.status(409).send();
-                        }
-                    }
-                );
-            }
-            else{
-                res.status(409).send();
-            }
-        });
-    });
-}
-function postLogin(req, res, next) {
-  MongoClient.connect(url,  function(err, db1) {
-    assert.equal(null, err);
-
-    console.log("Connected correctly to server");
-    console.log(req.body.username);
-    db1.collection("users").findOne({"username": req.body.username,"password":req.body.password},function(error, exist){
-        if(exist != null && error == null) {
-            delete(exist.password);
-            res.status(201).json(exist);
-        }
-        else {
-            res.status(409).send();
-        }
-    });
-  });
-}
-
+// function postLogin(req, res, next) {
+//   MongoClient.connect(url,  function(err, db1) {
+//     assert.equal(null, err);
+//
+//     console.log("Connected correctly to server");
+//     db1.collection("users").findOne({"username": req.body.username,"password":req.body.password},function(error, user){
+//         if(user != null && error == null) {
+//             delete(user.password);
+//             var token = jwt.sign(user, config.secret, {expiresIn: 1440 // expires in 24 hours
+//             });
+//               res.json({
+//                 success: true,
+//                 message: 'Enjoy your token!',
+//                 token: token
+//               });
+//         }
+//         else {
+//             res.status(409).send();
+//         }
+//     });
+//   });
+// }
+//
 
 // GET /users/{username}
 function getUsersUsername(req, res, next) {
