# Server/app.js
@@ -1,11 +1,11 @@
 'use strict';
 
-var config = {
-	appRoot: __dirname // required config
+var config2 = {
+	appRoot: __dirname // required config2
 };
 
 try {
-	process.chdir(config.appRoot); //on se place au bon endroit pour executer le processus
+	process.chdir(config2.appRoot); //on se place au bon endroit pour executer le processus
 }
 catch (err) {
 	console.log('chdir: ' + err);
@@ -18,14 +18,18 @@ var bodyParser = require('body-parser'); // Charge le middleware de gestion des 
 var methodOverride = require('method-override');
 var urlencodedParser = bodyParser.urlencoded({ extended: false });
 var request = require('request');
-
+var jwt = require('jsonwebtoken');
 var express = require('express')
     , http = require('http')
     , app = express()
     , server = http.createServer(app);
+var MongoClient = require('mongodb').MongoClient, assert = require('assert');
+var config = require('./api/controllers/config');
+var url = 'mongodb://127.0.0.1:27017/SeekFriend';
+
 
 module.exports = app; // for testing
-
+var apiRouter = express.Router();
 
 
 /* On utilise les sessions */
@@ -37,6 +41,7 @@ app.use(session({
 
 app.use('/node_modules', express.static(__dirname + '/node_modules'));
 app.set('view engine', 'ejs');
+//app.set('superSecret', config.secret);
 
 app.use(express.static(__dirname));
 app.use(methodOverride('_method'));
@@ -49,159 +54,112 @@ app.use(function(req, res, next) {
   res.header("Access-Control-Allow-Headers", "Origin, X-Requested-With, Content-Type, Accept");
   next();
 });
-SwaggerExpress.create(config, function(err, swaggerExpress) {
+
+// ############ROUTE /api/users/login LOGIN#################
+
+// Route Login hors du Swagger car sinon il est bloqué par le token d'authentification.
+
+
+apiRouter.post('/users', function (req, res, next) {
+	    MongoClient.connect(url,  function(err, db1) {
+	      assert.equal(null, err);
+	      console.log(">>>>>>>>>>><Connected correctly to server");
+	      db1.collection("users").findOne({$or:[{"username": req.body.username},{"email":req.body.email}]},function(error, user) {
+	        console.log(user);
+	          if(user == null && error == null){
+	                var data = req.body;
+	                data.friends = [];
+	                data.friendsRequest = [];
+	                data.positions = [];
+									console.log(data);
+	                db1.collection("users").insert(data,function(err, probe) {
+	                        if (!err){
+														delete(data.password);
+														var token = jwt.sign(data, config.secret, {expiresIn: 1440});
+														console.log(token);
+														res.json({
+															success: 200,
+															message: 'Enjoy your token!',
+															token: token
+														});
+	                        }
+	                        else{
+														console.log('non');
+	                            res.status(409).send();
+	                        }
+	                    });
+	            }
+	            else{
+								console.log('toujours non')
+	                res.status(409).send();
+	            }
+	        });
+	    });
+	});
+
+apiRouter.post('/users/login', function (req, res, next) {
+	MongoClient.connect(url,  function(err, db1) {
+    assert.equal(null, err);
+    console.log("Connected correctly to server");
+    db1.collection("users").findOne({"username": req.body.username,"password":req.body.password},function(error, user){
+        if(user != null && error == null) {
+            delete(user.password);
+            var token = jwt.sign(user, config.secret, {expiresIn: 1440 // expires in 24 hours
+            });
+              res.json({
+                success: true,
+                message: 'Enjoy your token!',
+                token: token
+              });
+        }
+        else {
+            res.status(409).send();
+        }
+    });
+  });
+
+});
+
+
+app.use('/api', apiRouter);
+
+app.use(function(req, res, next) {
+
+  // check header or url parameters or post parameters for token
+  var token = req.body.token || req.query.token || req.headers['x-access-token'];
+
+  // decode token
+  if (token) {
+    // verifies secret and checks exp
+    jwt.verify(token, config.secret, function(err, decoded) {
+      if (err) {
+				console.log("Fail token", token);
+        return res.json({ success: false, message: 'Failed to authenticate token.' });
+      } else {
+        // if everything is good, save to request for use in other routes
+        req.decoded = decoded;
+        next();
+      }
+    });
+
+  } else {
+		console.log("pas de token");
+    // if there is no token
+    // return an error
+    return res.status(403).send({
+        success: false,
+        message: 'No token provided.'
+    });
+
+  }
+});
+
+SwaggerExpress.create(config2, function(err, swaggerExpress) {
 
     if (err) { throw err; }
 
     // install middleware
     swaggerExpress.register(app);
-
     console.log("serveur bien lancé");
-    /* On redirige vers la todolist si la page demandée n'est pas trouvée */
-
-    // var user_session = new Object();
-    // user_session.username = username;
-    // user_session.lastname = lastname;
-    // user_session.firstname = firstname;
-    // user_session.email = "salut ca va ?";
-
-    /** Routes */
-  //   app.get('/', function(req, res){
-  //       if (typeof(req.session.username) != 'undefined') {
-  //           res.render('index', {
-  //               username: user_session.username,
-  //               lastname: user_session.lastname,
-  //               firstname: user_session.firstname,
-  //               session: true});
-  //       }
-  //       else{
-  //           res.render('index', {
-  //               session: false,
-  //               username: "test"});
-  //       }
-  //   });
-	//
-	// app.get('/users/:username', function (req, res){
-  //       if (typeof(req.session.username) != 'undefined') {
-  //           res.render('gestion', {
-  //               username: req.session.username,
-  //               lastname: req.session.lastname,
-  //               firstname: req.session.firstname,
-  //               session: true});
-  //       }
-  //       else{
-  //           res.send("<h1>UNKNOW USER</h1>");
-  //       }
-  //   });
-	//
-  //   app.put('/users/:username',urlencodedParser, function(req, res) {
-  //       if (req.body.change_prenom != undefined && req.body.change_nom != undefined && req.body.change_prenom != ''
-  //           && req.body.change_nom != ''){
-  //           lastname = req.body.change_prenom;
-  //           firstname = req.body.change_nom;
-  //       }
-  //       if (req.body.password != undefined && req.body.password2 != undefined && req.body.password2 == req.body.password){
-  //           password = req.body.password;
-  //       }
-  //       console.log(req.body);
-  //       res.redirect('/users');
-  //   });
-	//
-	// app.post('/signUp', function(req, res) {
-  //       request.post({ url : 'http://127.0.0.1:3000/api/users', form : req.body }, function(err,httpResponse,body){
-	// 		if (err){
-	// 			console.error(err);
-	// 			res.redirect('/');
-	// 		}
-	// 		if (httpResponse.statusCode == "201"){
-	// 			console.log(httpResponse.statusCode);
-	//
-	// 			req.session.username = req.body.username;
-	// 			req.session.lastname = req.body.lastname;
-	// 			req.session.firstname = req.body.firstname;
-	//
-	// 			user_session = req.session; //bcp de changement de var non ? on peut pas garder req.session ?
-	//
-	//
-	//
-	// 			// SUPPR APRES MOCK (FAKE) DEVICE
-	// 			var device = {
-	// 			  "name": "dev",
-	// 			  "manufacturer": "sam",
-	// 			  "model": "1",
-	// 			  "platform": "android",
-	// 			  "version": "1.0.0",
-	// 			  "serial": "1",
-	// 			  "uuid": "1"
-	// 			}
-	// 			var apiUrl = 'http://127.0.0.1:3000/api/users/' + user_session.username + '/devices'
-	// 			request.post({ url : apiUrl , form : device },function(err,httpResponse,body){
-	// 				console.log("error :",err);
-	// 				console.log("body :",body);
-	// 				console.log(httpResponse.statusCode);
-	// 			});
-	//
-	//
-	// 			res.redirect('/users/' + req.body.username);
-	// 		}
-	//
-	// 	});
-  //   });
-	//
-  //   app.post('/signIn', function(req, res) {
-  //       request.post({ url : 'http://127.0.0.1:3000/api/users/login', form : req.body }, function(err,httpResponse,body){
-  //           if (err){
-  //               console.error(err);
-  //               res.redirect('/');
-  //           }
-  //           if (httpResponse.statusCode == "201"){
-  //               var retournement = JSON.parse(httpResponse.body);
-  //               var objet = eval('(' + httpResponse.body + ')');
-  //               req.session.username = retournement.username;
-  //               req.session.lastname = retournement.lastname;
-  //               req.session.firstname = retournement.firstname;
-	//
-  //               res.redirect('/users/' + retournement.username);
-  //           }
-  //       });
-  //   });
-	//
-  //   app.get('/logout', function(req, res) {
-  //       req.session.destroy();
-  //       res.redirect('/');
-  //   });
-
-    app.get('*', function(req, res) {
-        res.send("erreur 404");
-    });
-    /*
-    app.post('/users/:username/devices/:uuid/actions',urlencodedParser, function(req, res, next) {
-        console.log(req.body);
-        next();
-    });
-
-    /*
-     app.post('/api/users',urlencodedParser, function(req, res){
-     console.log(req.body);
-     if (req.body.username != '' && req.body.firstname != '' && req.body.lastname != ''
-     && req.body.password != '' && req.body.password2 != '' && req.body.email != ''){
-     user_session.username = req.body.username;
-     user_session.lastname = req.body.lastname;
-     user_session.firstname = req.body.firstname;
-     user_session.email = req.body.email;
-     user_session.password  = req.body.password;
-     res.redirect('api/users/' + req.body.username);
-     }
-     else{
-     res.redirect('/');
-     }
-     });
-     */
-
-    //server.listen(8001,'192.168.21.55');
     server.listen(3000,'127.0.0.1');
-
-    // if (swaggerExpress.runner.swagger.paths['/api']) {
-    //   console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott');
-    // }
 });
